--- a/src/main/resources/group16/smartflightcheckinkiosk/MainMenu.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/MainMenu.fxml
@@ -36,7 +36,7 @@
                 </Menu>
                 <Menu mnemonicParsing="false" text="Budget">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Check" />
+                        <MenuItem mnemonicParsing="false" onAction="#gotoBudget" text="Check" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Boarding">
