--- a/src/main/resources/group16/smartflightcheckinkiosk/MainMenu.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/MainMenu.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -8,8 +11,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox fx:id="rootLayout" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.MainMenuController">
+<VBox fx:id="rootLayout" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.MainMenuController">
     <children>
         <MenuBar VBox.vgrow="NEVER">
             <menus>
@@ -47,13 +52,61 @@
             </menus>
         </MenuBar>
         <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-            <children>
-                <Label alignment="CENTER" layoutX="155.0" layoutY="177.0" style="&#10;" text="Drag components from Library here…" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </Label>
-            </children>
+           <children>
+               <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+                   <columnConstraints>
+                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                   </columnConstraints>
+                   <rowConstraints>
+                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                   </rowConstraints>
+                   <children>
+                       <Label contentDisplay="CENTER" prefHeight="15.0" prefWidth="99.0" text="Booking Flight" GridPane.rowIndex="1" />
+                       <Label contentDisplay="CENTER" text="arriving city" GridPane.rowIndex="4" />
+                       <Label contentDisplay="CENTER" text="depature city" GridPane.rowIndex="5" />
+                       <Label contentDisplay="CENTER" text="arriving time " GridPane.rowIndex="6" />
+                       <Label contentDisplay="CENTER" text="depature time" GridPane.rowIndex="7" />
+                       <Label contentDisplay="CENTER" text="Surname" GridPane.rowIndex="3" />
+                       <Label contentDisplay="CENTER" text="Booking Number" GridPane.rowIndex="2" />
+                       <Label fx:id="BookingFlight" contentDisplay="CENTER" prefHeight="15.0" prefWidth="99.0" text="666" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                       <Label fx:id="ArrivingCity" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                       <Label fx:id="DepatureCity" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                       <Label fx:id="ArrivingTime" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                       <Label fx:id="DepatureTime" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                       <Label fx:id="Surname" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                       <Label fx:id="BookingNumber" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Pane prefHeight="50.0" prefWidth="433.0" style="-fx-background-color: #87cefa;">
+                     <children>
+                        <Text layoutX="139.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Booking">
+                           <font>
+                              <Font size="30.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #87cefa;" GridPane.columnIndex="1">
+                     <children>
+                        <Text layoutX="14.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Information">
+                           <font>
+                              <Font size="30.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </Pane>
+                   </children>
+               <padding>
+                  <Insets left="30.0" />
+               </padding>
+               </GridPane>
+           </children>
         </AnchorPane>
     </children>
 </VBox>
