--- a/src/main/resources/group16/smartflightcheckinkiosk/boardingpass-ticket.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/boardingpass-ticket.fxml
@@ -15,7 +15,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
+<AnchorPane xmlns="http://javafx.com/javafx/15.0.1"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="group16.smartflightcheckinkiosk.Controller.BoardingpassTicketController"
             prefHeight="200.0" prefWidth="400.0">
