--- a/src/main/resources/group16/smartflightcheckinkiosk/budget.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/budget.fxml
@@ -37,6 +37,7 @@
         <Text layoutX="53.0" layoutY="140" strokeType="OUTSIDE" strokeWidth="0.0" text="input your credit Card Number:" />
             <TextField fx:id="cardnumField" alignment="CENTER" layoutX="74.0" layoutY="150.0" />
             <Text fx:id="not_balance" fill="BLUE" layoutX="50.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+            <Text fx:id="success" fill="gold" layoutX="100.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" />
             <Text fx:id="not_correct" fill="BLUE" layoutX="50.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" />
         <Button fx:id="ok" alignment="CENTER" contentDisplay="CENTER" layoutX="177.0" layoutY="200.0" mnemonicParsing="false" onAction="#ok" prefHeight="26.0" prefWidth="58.0" text="OK" />
         <Button fx:id="back" alignment="CENTER" contentDisplay="CENTER" layoutX="74.0" layoutY="200.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="58.0" style="-fx-background-color: #87cefa;" text="BACK" />
