--- a/src/main/resources/group16/smartflightcheckinkiosk/budget.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/budget.fxml
@@ -46,7 +46,7 @@
         <Button fx:id="back" alignment="CENTER" contentDisplay="CENTER" layoutX="74.0" layoutY="200.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="58.0" style="-fx-background-color: #87cefa;" text="BACK" />
         <ImageView fitHeight="87.0" fitWidth="87.0" layoutX="315.0" layoutY="31.0">
             <image>
-                <Image url="@img/IDnum.png" />
+                <Image url="@img/budget.png" />
             </image>
         </ImageView>
     </children>
