--- a/src/main/resources/group16/smartflightcheckinkiosk/EnterFlight.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/EnterFlight.fxml
@@ -1,49 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<VBox fx:id="EnterFlight" prefHeight="220.0" prefWidth="330.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.EnterFlightController">
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0" prefWidth="330.0">
-
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="10.0" prefWidth="600.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="290.0" minWidth="0.0" prefWidth="0.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints maxHeight="185.0" minHeight="10.0" prefHeight="107.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="185.0" minHeight="10.0" prefHeight="84.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="242.0" minHeight="10.0" prefHeight="99.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="151.0" minHeight="10.0" prefHeight="151.0" vgrow="SOMETIMES" />
-  </rowConstraints>
+<VBox fx:id="EnterFlight" prefHeight="250.0" prefWidth="330.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.EnterFlightController">
    <children>
-      <Button fx:id="b3" onAction="#gotoStaffLogin" mnemonicParsing="false" text="Go back" GridPane.halignment="LEFT" GridPane.rowIndex="3">
-         <GridPane.margin>
-            <Insets left="100.0" />
-         </GridPane.margin>
-      </Button>
-      <TextField fx:id="FlightnumField" GridPane.rowIndex="2" GridPane.valignment="TOP">
-         <GridPane.margin>
-            <Insets left="50.0" right="50.0" />
-         </GridPane.margin>
-      </TextField>
-      <Button fx:id="b4" onAction="#gotoCheckFlight" mnemonicParsing="false" text="  Next  " GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
-         <GridPane.margin>
-            <Insets right="100.0" />
-         </GridPane.margin>
-      </Button>
-      <Label alignment="TOP_LEFT" contentDisplay="TOP" text="Back-end System">
-         <GridPane.margin>
-            <Insets left="50.0" />
-         </GridPane.margin>
-      </Label>
-      <Label text="Please enter the flight number:" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets left="50.0" />
-         </GridPane.margin>
-      </Label>
+      <AnchorPane prefHeight="330.0" prefWidth="330.0">
+         <children>
+         <GridPane layoutY="35.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="215.0" prefWidth="331.0">
+         
+           <columnConstraints>
+             <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="10.0" prefWidth="600.0" />
+             <ColumnConstraints hgrow="SOMETIMES" maxWidth="290.0" minWidth="0.0" prefWidth="0.0" />
+           </columnConstraints>
+           <rowConstraints>
+               <RowConstraints maxHeight="185.0" minHeight="10.0" prefHeight="84.0" vgrow="SOMETIMES" />
+             <RowConstraints maxHeight="242.0" minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="151.0" minHeight="10.0" prefHeight="98.0" vgrow="SOMETIMES" />
+           </rowConstraints>
+            <children>
+               <Button fx:id="b3" mnemonicParsing="false" onAction="#gotoStaffLogin" text="Go back" GridPane.halignment="LEFT" GridPane.rowIndex="2">
+                  <GridPane.margin>
+                     <Insets left="80.0" />
+                  </GridPane.margin>
+               </Button>
+               <TextField fx:id="FlightnumField" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                  <GridPane.margin>
+                     <Insets left="50.0" right="50.0" />
+                  </GridPane.margin>
+               </TextField>
+               <Button fx:id="b4" mnemonicParsing="false" onAction="#gotoCheckFlight" text="  Next  " GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                  <GridPane.margin>
+                     <Insets right="80.0" />
+                  </GridPane.margin>
+               </Button>
+               <Label prefHeight="37.0" prefWidth="237.0" text="Please enter the flight number:">
+                  <GridPane.margin>
+                     <Insets left="50.0" />
+                  </GridPane.margin>
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+               </Label>
+            </children>
+         </GridPane>
+            <AnchorPane layoutY="-3.0" prefHeight="42.0" prefWidth="331.0" style="-fx-background-color: #78cefa;">
+               <children>
+                  <Text layoutX="41.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Back-end System" wrappingWidth="199.0">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Text>
+                  <ImageView fitHeight="21.0" fitWidth="21.0" layoutX="14.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@img/plane_logo.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+         </children>
+      </AnchorPane>
    </children>
-</GridPane>
 </VBox>
