--- a/src/main/resources/group16/smartflightcheckinkiosk/FlightList.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/FlightList.fxml
@@ -1,37 +1,127 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="FlightList" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.FlightListController">
+<VBox fx:id="FlightList" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.FlightListController">
    <children>
-      <AnchorPane prefHeight="600.0" prefWidth="400.0">
+      <AnchorPane prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: #78cafa;">
          <children>
-            <Text layoutX="14.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Check-in Status" />
-            <Text fx:id="Namefield1" layoutX="66.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
-            <Text fx:id="Gender1" layoutX="228.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="160.48046875" />
-            <Text fx:id="Seatfield1" layoutX="346.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
-            <Text fx:id="Statusfield1" layoutX="434.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Status" wrappingWidth="144.46875" />
-            <Text fx:id="Namefield2" layoutX="66.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
-            <Text fx:id="Namefield3" layoutX="66.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
-            <Text fx:id="Namefield4" layoutX="66.0" layoutY="459.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
-            <Text fx:id="Gender2" layoutX="228.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="160.48046875" />
-            <Text fx:id="Gender3" layoutX="228.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="160.48046875" />
-            <Text fx:id="Gender4" layoutX="228.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="160.48046875" />
-            <Text layoutX="63.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:" />
-            <Text layoutX="210.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gender:" />
-            <Text layoutX="326.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SeatNo:" />
-            <Text layoutX="450.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Status:" />
-            <Text fx:id="Seatfield2" layoutX="346.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
-            <Text fx:id="Seatfield3" layoutX="346.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
-            <Text fx:id="Seatfield4" layoutX="346.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
-            <Text fx:id="Statusfield2" layoutX="434.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="144.46875" />
-            <Text fx:id="Statusfield3" layoutX="434.0" layoutY="378.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="144.46875" />
-            <Text fx:id="Statusfield4" layoutX="434.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="144.46875" />
-         <Button fx:id="b7" layoutX="227.0" layoutY="585.0" mnemonicParsing="false" onAction="#gotoCheckFlight" text="Go back">
-      </Button>
+            <ImageView fitHeight="21.0" fitWidth="21.0" layoutX="14.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@img/plane_logo.png" />
+               </image>
+            </ImageView>
+            <Text layoutX="45.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Back-end System" wrappingWidth="199.0">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Text>
+         </children>
+      </AnchorPane>
+      <AnchorPane prefHeight="555.0" prefWidth="400.0">
+         <children>
+            <Text layoutX="26.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Check-in Status on this flight:">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Text>
+            <Text fx:id="Namefield1" layoutX="55.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="65.6298828125">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="Gender1" layoutX="175.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="65.6298828125">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="Seatfield1" layoutX="312.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="44.7275390625">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="Statusfield1" layoutX="433.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Status" wrappingWidth="95.46875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="Namefield2" layoutX="55.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="52.6298828125">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="Namefield3" layoutX="55.0" layoutY="307.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
+            <Text fx:id="Namefield4" layoutX="55.0" layoutY="377.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" ">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="Gender2" layoutX="175.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="111.46875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="Gender3" layoutX="175.0" layoutY="307.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="160.48046875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="Gender4" layoutX="175.0" layoutY="377.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="160.48046875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text layoutX="55.0" layoutY="104.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text layoutX="175.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gender:">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text layoutX="308.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SeatNo:">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text layoutX="433.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Status:">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="Seatfield2" layoutX="312.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
+            <Text fx:id="Seatfield3" layoutX="312.0" layoutY="307.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
+            <Text fx:id="Seatfield4" layoutX="312.0" layoutY="377.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
+            <Text fx:id="Statusfield2" layoutX="433.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="111.46875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="Statusfield3" layoutX="433.0" layoutY="307.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="95.46875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="Statusfield4" layoutX="433.0" layoutY="377.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="95.46875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+         <Button fx:id="b7" layoutX="247.0" layoutY="483.0" mnemonicParsing="false" onAction="#gotoCheckFlight" text="Go back">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </children>
