--- a/src/main/resources/group16/smartflightcheckinkiosk/Warning.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/Warning.fxml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="100.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.WarningController">
+<AnchorPane prefHeight="100.0" prefWidth="230.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.WarningController">
    <children>
       <ImageView fitHeight="36.0" fitWidth="36.0" layoutX="28.0" layoutY="29.0">
          <image>
             <Image url="@img/warning.png" />
          </image>
       </ImageView>
-      <Label layoutX="78.0" layoutY="35.0" prefHeight="30.0" prefWidth="98.0" text="WRONG INPUT!" textFill="#f20404">
+      <Label layoutX="78.0" layoutY="35.0" prefHeight="30.0" prefWidth="142.0" text="WRONG INPUT!" textFill="#f20404">
          <font>
             <Font name="Myanmar MN" size="13.0" />
          </font>
